<resources>
    <string name="app_name" translatable="false">Mzda</string>
    <string name="hruba_mzda">Hrubá mzda:</string>
    <string name="cista_mzda">Čistá mzda:</string>
    <string name="vypocti">Vypočti!</string>
    <string name="na_koruny">V celých korunách</string>
    <string name="neznama">zatím neznámá</string>
    <string name="neplatny_vstup">Neplatný vstup!</string>
    <string name="o_programu">O programu</string>
    <string name="ukoncit">Ukončit</string>
    <string name="nejlepsi_program">Tohle je nejlepší program :-)</string>
    <string name="ok">OK</string>
    <string name="nedostupne">nedostupné</string>
    <string name="program">Program</string>
    <string name="verze">Verze</string>
    <string name="sestaveno">Sestaveno</string>
    <string name="zdroj">Vytvořeno podle...</string>
    <string name="neni_browser">Nelze obsloužit požadavek. Nainstalujte prosím webový prohlížeč.</string>
    <string name="zadna_data">Chyba: Chybí data.</string>
    <string name="pro_vyuku">Aplikace pro výuku programování v systému Android na SPŠSE a VOŠ v Liberci.</string>
    <string name="spsse">SPŠSE a VOŠ v Liberci</string>
    <string name="zdojove_kody">Zdrojové kody</string>
    <string name="hlaseni_chyb">Hlášení chyb</string>
    <string name="menu_nastaveni">Nastavení</string>
    <string name="pref_user_name">Sleva na poplatníka</string>
    <string name="pref_user_name_summary">Nastavte slevu na poplatníka</string>
    <string name="pref_user_profile">Nastavení programu</string>
    <string name="no_value">Nenastaveno</string>
</resources>
